--- a/stock_prediction_api/requirements.txt
+++ b/stock_prediction_api/requirements.txt
@@ -1,11 +1,31 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.4.2
-numpy==1.24.3
-pandas==2.0.3
-tensorflow==2.15.0
-scikit-learn==1.3.2
-python-dotenv==1.0.0
-pytest==7.4.3
-httpx==0.25.1  # for testing
-joblib==1.3.2 
+appnope==0.1.4
+asttokens==3.0.0
+comm==0.2.2
+debugpy==1.8.14
+decorator==5.2.1
+executing==2.2.0
+ipykernel==6.29.5
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+packaging==25.0
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+pyzmq==26.4.0
+six==1.17.0
+stack-data==0.6.3
+tornado==6.5.1
+traitlets==5.14.3
+typing_extensions==4.14.0
+wcwidth==0.2.13
